--- a/public/global.css
+++ b/public/global.css
@@ -80,17 +80,36 @@ body {
 
 .item-wrap {
     width: 100%;
-    padding: 10px;
 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 
+    /* border: 1px solid black; */
+    border-radius: 5px;
+}
+
+.item-box-wrap {
+    width: 100%;
+    padding: 10px;
+
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+    align-items: center;
+
     border: 1px solid black;
     border-radius: 5px;
 
-    margin: 5px 0px;
+    margin: 10px 0px;
+
+    cursor: pointer;
+}
+
+.item-box-wrap:hover {
+    background-color: gray;
+    color: white;
 }
 
 .item-wrap-left {
@@ -103,13 +122,13 @@ body {
     width: 200px;
     height: 200px;
     border-radius: 10px;
-
-    cursor: pointer;
 }
 
 .item-wrap-right {
-    width: 70%;
+    width: 60%;
     font-size: 20px;
+
+    margin-left: 20px;
 
     display: flex;
     flex-direction: column;
@@ -132,10 +151,16 @@ body {
     font-size: 15px;
 }
 
+.like-icon-wrap {
+    width: 100px;
+
+    margin-left: 30px;
+}
+
 .item-basket {
-    width: 10%;
     font-size: 50px;
     font-weight: bold;
 
     cursor: pointer;
+    text-align: center;
 }
