--- a/public/global.css
+++ b/public/global.css
@@ -62,6 +62,20 @@ body {
     color: white;
 }
 
+.btn2 {
+    width: 100px;
+    height: 50px;
+
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 10px;
+
+    cursor: pointer;
+
+    background-color: black;
+    color: white;
+}
+
 .list-wrap {
     width: 100%;
     margin-top: 10px;
