--- a/public/global.css
+++ b/public/global.css
@@ -11,6 +11,7 @@ body {
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .header-wrap {
@@ -22,10 +23,12 @@ body {
     justify-content: space-between;
     align-items: center;
 
+    background-color: whitesmoke;
+
     /* padding: 30px; */
 
-    border: 1px solid black;
-    border-radius: 5px;
+    /* border: 1px solid black;
+    border-radius: 5px; */
 }
 
 .logo-text {
@@ -77,7 +80,7 @@ body {
 }
 
 .list-wrap {
-    width: 100%;
+    width: 1920px;
     margin-top: 10px;
 
     display: flex;
@@ -139,7 +142,7 @@ body {
 }
 
 .item-wrap-right {
-    width: 60%;
+    width: 100%;
     font-size: 20px;
 
     margin-left: 20px;
