--- a/public/global.css
+++ b/public/global.css
@@ -1,183 +1,52 @@
+/* @font-face {
+    font-family: "S-CoreDream-3Light";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff")
+        format("woff");
+    font-weight: normal;
+    font-style: normal;
+} */
+
+@font-face {
+    font-family: "GangwonEdu_OTFBoldA";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff")
+        format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
+    margin: 0px;
     box-sizing: border-box;
+
+    font-family: "GangwonEdu_OTFBoldA";
+    font-style: normal;
+
+    color: #323232;
 }
 
 body {
-    margin: 0px;
-}
-
-.page-wrap {
     width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.header-wrap {
-    width: 100%;
-    height: 300px;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    background-color: whitesmoke;
-
-    /* padding: 30px; */
-
-    /* border: 1px solid black;
-    border-radius: 5px; */
-}
-
-.logo-text {
-    /* display: flex; */
-    width: 70%;
-    /* height: 100%; */
-    font-size: 100px;
-    font-weight: 900;
-    text-align: center;
-}
-
-.btn-wrap {
-    width: 30%;
     height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-end;
 }
 
-.btn {
-    width: 100px;
-    height: 50px;
-
-    border: 1px solid black;
-    border-radius: 5px;
-    margin: 10px;
-
-    cursor: pointer;
-}
-
-.btn:hover {
-    background-color: black;
-    color: white;
-}
-
-.btn2 {
-    width: 100px;
-    height: 50px;
-
-    border: 1px solid black;
-    border-radius: 5px;
-    margin: 10px;
-
-    cursor: pointer;
-
-    background-color: black;
-    color: white;
-}
-
-.list-wrap {
-    width: 1920px;
-    margin-top: 10px;
-
+.page_wrap {
     display: flex;
     flex-direction: column;
-
-    justify-content: space-around;
     align-items: center;
-
-    border: 1px solid black;
-    border-radius: 5px;
-
-    padding: 30px;
 }
 
-.item-wrap {
-    width: 100%;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    /* border: 1px solid black; */
-    border-radius: 5px;
-}
-
-.item-box-wrap {
-    width: 100%;
-    padding: 10px;
-
-    display: flex;
-    flex-direction: row;
-    /* justify-content: space-between; */
-    align-items: center;
-
-    border: 1px solid black;
-    border-radius: 5px;
-
-    margin: 10px 0px;
-
-    cursor: pointer;
-}
-
-.item-box-wrap:hover {
-    background-color: gray;
-    color: white;
-}
-
-.item-wrap-left {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.item-image {
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
-}
-
-.item-wrap-right {
-    width: 100%;
-    font-size: 20px;
-
-    margin-left: 20px;
-
+.img_wrap {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
-.item-text {
-    font-size: 25px;
-    font-weight: bold;
-}
+.main_img {
+    /* width: 100vw; */
+    height: 100vh;
 
-.item-line {
-    margin: 5px 0px;
+    content: url(./images/main_img.jpg);
 
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-.item-content-text {
-    font-size: 15px;
-}
-
-.like-icon-wrap {
-    width: 100px;
-
-    margin-left: 30px;
-}
-
-.item-basket {
-    font-size: 50px;
-    font-weight: bold;
-
-    cursor: pointer;
-    text-align: center;
+    display: block;
+    margin: 0px auto;
 }
