--- a/public/global.css
+++ b/public/global.css
@@ -55,3 +55,11 @@ body {
     width: 100%;
     height: 100%;
 }
+
+@font-face {
+    font-family: "UhBeeSe_hyun";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_five@.2.0/UhBeeSe_hyun.woff")
+        format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
